# cpp-subprocess

./: .gitmodules  .travis.yml  CMakeLists.txt  DEPENDENCIES  DICTIONARY  PACKAGES.OSX.10.10  PACKAGES.Ubuntu.trusty  README.md  conanfile.py
cmake/: VeraPPTargets.cmake
generators/: CMakeLists.txt  cpp_subprocess_string_replacement_generator.cpp  generators_common.cpp  generators_common.h
include/: CMakeLists.txt
include/cpp-subprocess/: CMakeLists.txt  fdbackup.h  launch.h  locatebinary.h  operating_system.h  pipe.h  readfd.h  redirectedfd.h
mocks/: CMakeLists.txt  mock_operating_system.cpp  mock_operating_system.h
src/: CMakeLists.txt  darwin_operating_system.cpp  fdbackup.cpp  gnu_operating_system.cpp  launch.cpp  locatebinary.cpp  nonportable_gnu.h  pipe.cpp  readfd.cpp  redirectedfd.cpp
tests/: CMakeLists.txt  main.cpp
tests/acceptance/: CMakeLists.txt  acceptance_tests_config.h.in  launch.cpp  locatebinary.cpp
tests/acceptance/simple_executable/: CMakeLists.txt  simple_executable.cpp
tests/integration/: CMakeLists.txt  fdbackup.cpp  pipe.cpp  readfd.cpp  redirectedfd.cpp
