# /CMakeLists.txt
# Main CMake file for cpp-subprocess.
#
# See LICENCE.md for Copyright Information.

project (CPPSubprocess)

cmake_minimum_required (VERSION 2.8 FATAL_ERROR)

set (Boost_USE_STATIC_LIBS ON)

set (CPP_SUBPROCESS_CMAKE_MODULE_DIRECTORY
     ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
set (CPP_SUBPROCESS_CMAKE_GMOCK_CMAKE_MODULE_DIRECTORY
     ${CPP_SUBPROCESS_CMAKE_MODULE_DIRECTORY}/CMakeGoogleMock)
set (CPP_SUBPROCESS_VERAPP_CMAKE_MODULE_DIRECTORY
     ${CPP_SUBPROCESS_CMAKE_MODULE_DIRECTORY}/Vera++)
set (CPP_SUBPROCESS_CMAKE_CPPCHECK_MODULE_DIRECTORY
     ${CPP_SUBPROCESS_CMAKE_MODULE_DIRECTORY}/CMakeCPPCheck)
set (CMAKE_MODULE_PATH
     ${CPP_SUBPROCESS_CMAKE_GMOCK_CMAKE_MODULE_DIRECTORY}
     ${CPP_SUBPROCESS_VERAPP_CMAKE_MODULE_DIRECTORY}
     ${CPP_SUBPROCESS_CMAKE_CPPCHECK_MODULE_DIRECTORY}
     ${CMAKE_MODULE_PATH})

find_package (Boost 1.46 REQUIRED COMPONENTS iostreams)
find_package (GoogleMock REQUIRED)
find_package (VeraPP 1.2 REQUIRED)

find_program (CPPCHECK_EXECUTABLE cppcheck)

if (NOT CPPCHECK_EXECUTABLE)

    message (SEND_ERROR "cppcheck was not found")

endif (NOT CPPCHECK_EXECUTABLE)

mark_as_advanced (CPPCHECK_EXECUTABLE)

set (COMPILER_FLAGS "-fPIC -Wall -Werror")
set (CXX_CXX11_FLAGS "-std=c++0x")
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${COMPILER_FLAGS} ${CXX_CXX11_FLAGS}")
set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${COMPILER_FLAGS}")

# Set up Vera++
set (CPP_SUBPROCESS_VERAPP_OUTPUT_DIRECTORY
     ${CMAKE_CURRENT_BINARY_DIR}/vera++)
set (CPP_SUBPROCESS_VERAPP_SCRIPTS_OUTPUT_DIRECTORY
     ${CPP_SUBPROCESS_VERAPP_OUTPUT_DIRECTORY}/scripts)
set (CPP_SUBPROCESS_VERAPP_RULES_OUTPUT_DIRECTORY
     ${CPP_SUBPROCESS_VERAPP_SCRIPTS_OUTPUT_DIRECTORY}/rules)
set (CPP_SUBPROCESS_VERAPP_PROFILES_OUTPUT_DIRECTORY
     ${CPP_SUBPROCESS_VERAPP_OUTPUT_DIRECTORY}/profiles)
set (CPP_SUBPROCESS_VERAPP_SOURCE_DIRECTORY
     ${CMAKE_CURRENT_SOURCE_DIR}/tools/vera++)
set (CPP_SUBPROCESS_VERAPP_SCRIPTS_SOURCE_DIRECTORY
    ${CPP_SUBPROCESS_VERAPP_SOURCE_DIRECTORY}/scripts)
set (CPP_SUBPROCESS_VERAPP_RULES_SOURCE_DIRECTORY
    ${CPP_SUBPROCESS_VERAPP_SCRIPTS_SOURCE_DIRECTORY}/rules/)
set (CPP_SUBPROCESS_VERAPP_PROFILES_SOURCE_DIRECTORY
    ${CPP_SUBPROCESS_VERAPP_SOURCE_DIRECTORY}/profiles/)

set (CPP_SUBPROCESS_VERAPP_PROFILE cpp-subprocess)

set (CPP_SUBPROCESS_VERAPP_IMPORT_RULES cpp_subprocess_verapp_import_rules)

include (${CPP_SUBPROCESS_CMAKE_MODULE_DIRECTORY}/VeraPPTargets.cmake)

# Set up cppcheck
include (CPPCheck)

set (CPP_SUBPROCESS_EXTERNAL_INCLUDE_DIRS ${Boost_INCLUDE_DIRS})
set (CPP_SUBPROCESS_TEST_INCLUDE_DIRS
     ${GTEST_INCLUDE_DIR}
     ${GMOCK_INCLUDE_DIR})
set (CPP_SUBPROCESS_INTERNAL_INCLUDE_DIRECTORY
     ${CMAKE_CURRENT_SOURCE_DIR}/include)
set (CPP_SUBPROCESS_INTERNAL_SOURCE_DIRECTORY
     ${CMAKE_CURRENT_SOURCE_DIR}/src)
set (CPP_SUBPROCESS_MOCKS_DIRECTORY
     ${CMAKE_CURRENT_SOURCE_DIR}/mocks)
set (CPP_SUBPROCESS_TESTS_DIRECTORY
     ${CMAKE_CURRENT_SOURCE_DIR}/tests)
set (CPP_SUBPROCESS_EXTERNAL_LIBRARIES
     ${Boost_LIBRARIES})
set (CPP_SUBPROCESS_TEST_LIBRARIES
     ${GTEST_BOTH_LIBRARIES}
     ${GMOCK_LIBRARY})

set (CPP_SUBPROCESS_LIBRARY polysquare_cpp_subprocess)
set (CPP_SUBPROCESS_MOCKS polysquare_cpp_subprocess_mocks)

add_subdirectory (${CPP_SUBPROCESS_INTERNAL_INCLUDE_DIRECTORY})
add_subdirectory (${CPP_SUBPROCESS_INTERNAL_SOURCE_DIRECTORY})
add_subdirectory (${CPP_SUBPROCESS_MOCKS_DIRECTORY})
add_subdirectory (${CPP_SUBPROCESS_TESTS_DIRECTORY})

# Append all sources to unused function check
add_custom_target (cpp_subprocess_check_unused ALL
                   COMMENT "Checking for unused functions")

# The boost and gtest libraries are quite complicated 
set (CPP_SUBPROCESS_UNUSED_INCLUDES
     ${CPP_SUBPROCESS_INTERNAL_INCLUDE_DIRECTORY}
     ${CPP_SUBPROCESS_INTERNAL_SOURCE_DIRECTORY}
     ${CPP_SUBPROCESS_INTERNAL_SOURCE_BINARY_DIRECTORY})
cppcheck_add_global_unused_function_check_to_target (cpp_subprocess_check_unused
                                                     INCLUDES
                                                     ${CPP_SUBPROCESS_UNUSED_INCLUDES})
