# /tests/CMakeLists.txt
#
# Build acceptance and integration tests

set (CPP_SUBPROCESS_ACCEPTANCE_TESTS_DIRECTORY
     ${CMAKE_CURRENT_SOURCE_DIR}/acceptance)
set (CPP_SUBPROCESS_INTEGRATION_TESTS_DIRECTORY
     ${CMAKE_CURRENT_SOURCE_DIR}/integration)

add_subdirectory (${CPP_SUBPROCESS_ACCEPTANCE_TESTS_DIRECTORY})
add_subdirectory (${CPP_SUBPROCESS_INTEGRATION_TESTS_DIRECTORY})
